tests-integration/tests/roundtrip/invalid/semantic/duplicate_var_declaration/03/duplicate_var_declaration_03.essence
find x : bool
letting x be false
such that x = false